--- a/index.html
+++ b/index.html
@@ -532,13 +532,13 @@
             и составляет 12 месяцев с момента оформления заказа
           </p>
 
-          <div class="specification-link btn-white">
+          <div class="specification-link btn-white warranty-link">
             <a href="#description" style="color: var(--primary-black)"
               >Посмотреть спецификацию</a
             >
           </div>
 
-          <img src="./src/images/Flag.webp" alt="флаг" />
+          <img class="warranty__img" src="./src/images/Flag.webp" alt="флаг" />
         </div>
       </div>
     </section>
@@ -801,13 +801,17 @@
         <div class="warranty__block section-wrap">
           <h3>Рассрочка</h3>
           <p>Возможность покупки без переплат 0%</p>
-          <div class="specification-link btn-white">
+          <div class="specification-link btn-white installment-link">
             <a href="#description" style="color: var(--primary-black)"
               >Посмотреть спецификацию</a
             >
           </div>
 
-          <img src="./src/images/Flag.webp" alt="флаг" />
+          <img
+            class="installment__img"
+            src="./src/images/Arrow.webp"
+            alt="флаг"
+          />
         </div>
       </div>
     </section>
