исправлена вёрстка 1440px

--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
             </div>
             <div class="block__desc">
               <ul class="block__labels">
-                <li>Гарантия</li>
-                <li>Рассрочка 0%</li>
-                <li>Готов к отгрузке</li>
+                <li><div>Гарантия</div></li>
+                <li><div>Рассрочка 0%</div></li>
+                <li><div>Готов к отгрузке</div></li>
               </ul>
 
               <h3>Predator 2000</h3>
@@ -532,7 +532,7 @@
             и составляет 12 месяцев с момента оформления заказа
           </p>
 
-          <div class="specification-link btn-white warranty-link">
+          <div class="btn-white warranty-link">
             <a href="#description" style="color: var(--primary-black)"
               >Посмотреть спецификацию</a
             >
@@ -801,7 +801,7 @@
         <div class="warranty__block section-wrap">
           <h3>Рассрочка</h3>
           <p>Возможность покупки без переплат 0%</p>
-          <div class="specification-link btn-white installment-link">
+          <div class="btn-white warranty-link installment-link">
             <a href="#description" style="color: var(--primary-black)"
               >Посмотреть спецификацию</a
             >
