внесены правки в вёрстку

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <ul class="nav-menu">
           <li><a href="#description" class="nav-link">Описание</a></li>
-          <li><a href="#galery" class="nav-link">Галерея</a></li>
+          <li><a href="#gallery" class="nav-link">Галерея</a></li>
           <li>
             <a href="#efficiency" class="nav-link">Производительность</a>
           </li>
@@ -35,13 +35,14 @@
         <div class="hero__main">
           <div class="hero__block">
             <div class="hero__content">
+              <div class="hero__label">
+                <img src="./src/images/Flag.webp" alt="флаг" />&nbsp;<span
+                  >1200+ собранных игровых ПК с 2019 года</span
+                >
+              </div>
+
               <h2><span>ПК Predator 2000 для</span> <span>Кирилла</span></h2>
               <p>Персональное предложение с учётом ваших задач</p>
-            </div>
-            <div class="hero__label">
-              <img src="./src/images/Flag.webp" alt="флаг" />&nbsp;<span
-                >1200+ собранных игровых ПК с 2019 года</span
-              >
             </div>
           </div>
           <div class="hero__group">
@@ -126,7 +127,7 @@
             </div>
             <div class="block__desc">
               <ul class="block__labels">
-                <li><div>12 мес.</div></li>
+                <li><div>Гарантия 12 мес.</div></li>
                 <li><div>Рассрочка 0%</div></li>
               </ul>
 
@@ -976,7 +977,7 @@
           <div class="footer__block">
             <ul class="footer__menu">
               <li><a href="#description">Описание</a></li>
-              <li><a href="#galery">Галерея</a></li>
+              <li><a href="#gallery">Галерея</a></li>
               <li>
                 <a href="#efficiency">Производительность</a>
               </li>
